# football-player-detection-mlops

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  train_docker.sh
.github/workflows/: cd.yml  ci.yml  infrastructure.yml
api/: main.py
configs/: test_config.yaml  training_config.yaml
docker/: .dockerignore  Dockerfile.inference  Dockerfile.training  docker-compose.yml
monitoring/: prometheus.yml
scripts/: build_inference.sh  build_training.sh  deploy_application.sh  download_data.sh  run_inference.sh  train.sh  train_docker.sh
src/inference/: predictor.py
src/models/: yolo_model.py
src/test/: evaluate.py
src/training/: mlflow_tracking.py  train.py
static/: app.js  index.html  style.css
terraform/: backend.tf  ecr.tf  ecs.tf  network.tf  providers.tf  variables.tf
tests/: test_api_endpoints.py
