[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football-player-detection-mlops"
version = "0.1.0"
description = "An MLOps pipeline for football player detection."
requires-python = ">=3.9"

# Your project's dependencies go here
dependencies = [
    "numpy<2",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "torch",
    "torchvision",
    "ultralytics",
    "opencv-python-headless",
    "Pillow",
    "prometheus-client",
    "jinja2"
]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the 'src' directory
